[metadata]
name = bind
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/bind.py
description = A tool to inline constants into function to speed them up written just for fun.
long_description = file: README.md
keywords = python, programming, inline, speed, performance, optimization
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = True
py_modules = bind
setup_requires = setuptools_scm;
test_suite = tests.tests.SimpleTest

[package_data]
'' = UNLICENSE, *.md, tests, .editorconfig
